# anchor

./: Cargo.toml  READMD-cn.md
tdx2mysql/: Cargo.toml
tdx2mysql/db/: schema.sql
tdx2mysql/src/: main.rs
tdx2mysql/src/config/: db.rs
tdx2mysql/src/tdx/: mod.rs
tdx2mysql/src/tdx/dao/: mod.rs  trading.rs
tdx2mysql/tdx/: SH#000016.txt  SH#000688.txt  SH#204001.txt  SH#510050.txt  SH#510300.txt  SH#588380.txt  SH#600893.txt  SH#601398.txt  SH#900957.txt  SH#999999.txt  SZ#000851.txt  SZ#159919.txt  SZ#159949.txt  SZ#399001.txt  SZ#399006.txt
