[package]
name = "tdx2mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
sqlx = { version = "0.5.6", features = ["mysql", "runtime-tokio-rustls"] }
tokio = { version = "1.13", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
