[package]
name = "tdx2mysql"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
encoding = "0.2.33"
sqlx = { version = "0.5.6", features = ["mysql", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.13", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
